# meshcore

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/meshcore/: config.py  main.py  query.py  tui_main.py  web_main.py
src/meshcore/adapters/meshtastic/: commander.py  mock.py  source.py  tcp.py  translate.py
src/meshcore/adapters/pubsub/: logging.py  mqtt.py
src/meshcore/adapters/storage/: __init__.py  memory.py  replay.py  sqlite.py  state_memory.py  state_sqlite.py
src/meshcore/adapters/ui/: __init__.py  tui.py  web.py  widgets.py
src/meshcore/adapters/ui/static/: style.css
src/meshcore/adapters/ui/templates/: analytics.html  compose.html  index.html  messages.html  messages_list.html  node_details.html  nodes_table.html  send_result.html  sent_messages.html  stats.html  telemetry.html
src/meshcore/application/: message_service.py  ports.py  services.py  state_projection.py  telemetry_service.py
src/meshcore/domain/: models.py
tests/: conftest.py
tests/fixtures/: __init__.py  factories.py
tests/integration/: test_event_sourcing.py
tests/unit/adapters/: __init__.py  test_mqtt.py
tests/unit/adapters/meshtastic/: __init__.py  test_commander.py
tests/unit/adapters/storage/: __init__.py  test_sqlite.py
tests/unit/application/: __init__.py  test_message_service.py  test_projector.py  test_telemetry_service.py
tests/unit/domain/: __init__.py  test_events.py  test_state.py
